# libtmpl

./: CMakeLists.txt  CMakePresets.json  conanfile.py  conanfile.txt
.github/workflows/: cmake.yml
tests/fft_tests/: CMakeLists.txt  tmpl_fft_bluestein_cdouble_time_test.c  tmpl_fft_cooley_tukey_cdouble_time_test.c  tmpl_ifft_cooley_tukey_cdouble_time_test.c
tests/math_tests/time_tests/: CMakeLists.txt
tests/sort_tests/time_tests/: CMakeLists.txt
tests/sort_tests/unit_tests/: CMakeLists.txt
tests/special_functions_tests/time_tests/: CMakeLists.txt
tests/window_functions_tests/time_tests/: CMakeLists.txt
tests/window_functions_tests/window_functions_plots/: CMakeLists.txt
